syntax = "proto3";

package subscription;

service SubscriptionService {
  rpc Subscribe (SubscriptionRequest) returns (TokenResponse);
  rpc Confirm (TokenRequest) returns (Empty);
  rpc Unsubscribe (TokenRequest) returns (Empty);
}

message SubscriptionRequest {
  string email = 1;
  string city = 2;
  SubscriptionFrequency frequency = 3;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string token = 1;
}

message Empty {}

enum SubscriptionFrequency {
  UNKNOWN_FREQUENCY = 0;
  HOURLY = 1;
  DAILY = 2;
}